--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
   <!-- HERO SECTION -->
   <div class="hero">
     <!-- Replace the src link below with your logo file -->
-    <img src="logo.png" alt="NEXA TECH Logo">
+    <a href="NexaTech.pptx" download>
+  <img src="logo.png" alt="NEXA TECH Logo">
+</a>
+
     <h1>NEXA TECH PVT. LTD.</h1>
     <div class="scroll-down" onclick="document.getElementById('info').scrollIntoView({behavior:'smooth'})">
       ↓ Scroll Down
