--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@
   <!-- HERO SECTION -->
   <div class="hero">
     <!-- Replace the src link below with your logo file -->
-    <a href="NexaTech.pptx" download>
-  <img src="logo.png" alt="NEXA TECH Logo">
+<a href="NexaTech.pptx" download onclick="alert('💾 Downloading NexaTech Presentation...')">
+  <img src="logo.png" alt="NEXA TECH Logo" style="width:200px;height:auto;">
 </a>
+
 
     <h1>NEXA TECH PVT. LTD.</h1>
     <div class="scroll-down" onclick="document.getElementById('info').scrollIntoView({behavior:'smooth'})">
@@ -156,3 +157,4 @@
   </script>
 </body>
 </html>
+
